--- a/EngineTests/EngineTests.csproj
+++ b/EngineTests/EngineTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ExampleClass.cs" />
     <Compile Include="SimpleContainerTest.cs" />
     <Compile Include="SingletonLifetimePolicyTest.cs" />
+    <Compile Include="SpecifiedInstanceLifetimePolicyTest.cs" />
     <Compile Include="TransientLifetimePolicyTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
