--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ConstructorInjection\DependencyConstructorException.cs" />
     <Compile Include="ConstructorInjection\AbstractConstructorResolver.cs" />
     <Compile Include="ConstructorInjection\LongestConstructorResolver.cs" />
+    <Compile Include="IContainer.cs" />
     <Compile Include="LifetimePolicy\SpecifiedInstanceLifetimePolicy.cs" />
     <Compile Include="LifetimePolicy\ILifetimePolicy.cs" />
     <Compile Include="TypeResolution\ConcreteTypeResolver.cs" />
