--- a/EngineTests/EngineTests.csproj
+++ b/EngineTests/EngineTests.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1402.2112\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,18 +53,25 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ConstructorInjection\AttributeConstructorResolverTest.cs" />
+    <Compile Include="ConstructorInjection\LongestConstructorResolverTest.cs" />
     <Compile Include="ExampleClass.cs" />
     <Compile Include="SimpleContainerTest.cs" />
     <Compile Include="LifetimePolicy\SingletonLifetimePolicyTest.cs" />
     <Compile Include="LifetimePolicy\SpecifiedInstanceLifetimePolicyTest.cs" />
     <Compile Include="LifetimePolicy\TransientLifetimePolicyTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeResolution\AbstractTypeResolverTest.cs" />
+    <Compile Include="TypeResolution\ConcreteTypeResolverTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Engine\Engine.csproj">
       <Project>{ce9a3a66-e225-4bcf-9088-20281aab482f}</Project>
       <Name>Engine</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
